@@ -39,7 +39,7 @@
             "rct2.scenery_small.torn2",
             "$DAT:0C58B401|IRTORN2C",
             "rct2.scenery_small.tgs",
-            "$DAT:00000002|1KTGSMTC",
+            "fidwell.scenery_small.tgs",
             "rct2.scenery_small.tus",
             "$DAT:0C58B401|IRETUS1C",
             "rct2.scenery_small.tbc",
