@@ -1,0 +1,47 @@
+{
+    "id": "fidwell.scenery_small.tgs",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|1KTGSMTC|CDB18B3B",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 12,
+        "removalPrice": -10,
+        "cursor": "CURSOR_STATUE_DOWN",
+        "height": 80,
+        "shape": "4/4",
+        "requiresFlatSurface": true,
+        "isRotatable": true,
+        "isStackable": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -17, "y": -81 },
+      { "path": "images/1.png", "x": -18, "y": -74 },
+      { "path": "images/2.png", "x": -18, "y": -73 },
+      { "path": "images/3.png", "x": -18, "y": -82 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Giraffe Statue",
+            "fr-FR": "Statue de girafe",
+            "de-DE": "Giraffenstatue",
+            "es-ES": "Estatua jirafa",
+            "it-IT": "Statua della giraffa",
+            "nl-NL": "Giraffenstandbeeld",
+            "sv-SE": "Giraffstaty",
+            "ko-KR": "기린 동상",
+            "zh-CN": "长颈鹿雕像",
+            "zh-TW": "長頸鹿雕像",
+            "pt-BR": "Estátua de Girafa",
+            "cs-CZ": "Socha žirafy",
+            "ja-JP": "キリンの像",
+            "pl-PL": "Posąg żyrafy",
+            "ru-RU": "Жираф",
+            "eo-ZZ": "Statuo de Ĝirafo",
+            "ca-ES": "Estàtua d’una jirafa",
+            "fi-FI": "Kirahvipatsas"
+        }
+    }
+}
